hphp/test/zend/good/ext/iconv/tests/iconv_get_encoding_basic.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("iconv")) { echo 'skip extension not available'; }
}
